feat: add login endpoint
