# internal/application/auth/handlers.go
@@ -1,0 +1,17 @@
+package auth
+
+import "context"
+
+type LoginService interface {
+	Login(ctx context.Context, email, password string) (string, error)
+}
+
+type Handlers struct {
+	service LoginService
+}
+
+func SetupHandlers(service LoginService) Handlers {
+	return Handlers{
+		service: service,
+	}
+}
